# morse-paddle

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  memory.x  memory.x.license
.cargo/: config.toml
src/: decoder.rs  lib.rs  main.rs  menu.rs  storage.rs  tutor.rs
tests/: integration.rs
